# JavaMigration

./: README.md  requirements.txt
data/strands_migration_traces/baseline-agent-sonnet-4-5-max-verify/: 15093015999__EJServer.json  284885166__spring-boot-hashids.json  AingeZzz__easy-crypto.json  AmadeusITGroup__HttpSessionReplacer.json  Artur-__a-vaadin-helper.json  BillKiller__JavaFX-Plus.json  BjoernKW__oauth2-with-jira.json  BlueObelisk__chemicaltagger.json  Camphul__Trampoline.json  Citymonstret__Rorledning.json  Comic-Con-Museum__fan-forge-backend.json  Contargo__contargo-types.json  CubeEngine__ReflecT.json  DaiYuanchuan__tool.json  DickChesterwood__fleetman-webapp.json  DreamJM__TLVCodec.json  Erudika__para.json  EvanDylan__unicorn.json  ExpediaGroup__adaptive-alerting.json  ExpediaGroup__rhapsody.json  FedUni__caliko.json  HaoQiangJiang__file-manage.json  IBM__cc-dbp.json  JanStrauss__skadi.json  Minnull__runboot.json  (+271 more)
java_migration_agent/: README.md  pyproject.toml  requirements.txt
java_migration_agent/examples/: run_benchmark.py  run_single_repo.py
java_migration_agent/src/java_migration_agent/: __init__.py  __main__.py  main.py  orchestrator.py
java_migration_agent/src/java_migration_agent/agents/: __init__.py  baseline_agent.py  hybrid_agent.py  rag_agent.py
java_migration_agent/src/java_migration_agent/config/: __init__.py  settings.py
java_migration_agent/src/java_migration_agent/core/: __init__.py  base_agent.py  model_factory.py  repository.py
java_migration_agent/src/java_migration_agent/evaluation/: __init__.py  evaluator.py
java_migration_agent/src/java_migration_agent/hooks/: __init__.py  agent_hooks.py
java_migration_agent/src/java_migration_agent/preprocessing/: __init__.py  seed_changes.py
java_migration_agent/src/java_migration_agent/tools/: __init__.py  dependency_tools.py  pom_tools.py  shell_tools.py
java_migration_agent/src/java_migration_agent/utils/: __init__.py  hf_utils.py  io_utils.py
self_debug/: README.md  pyproject.toml  requirements.txt
self_debug/src/self_debug/: self_debugging.py
self_debug/src/self_debug/common/: eval_utils.py
(+897 files in other folders)
